# slegro

./: .gitignore  Makefile  defs.h  gpio.h  i2c.c  i2c.h  log.c  log.h  lpc2138.ld  main.c  pca9685.c  pca9685.h  pll.c  pll.h  pwm.h  serial.c  serial.h  servo.h  startup.s  syscalls.c  timer.h  vic.c  vic.h
android/app/: build.gradle
android/app/src/androidTest/java/com/example/sreeyesh/slegro/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/sreeyesh/slegro/: BluetoothConnectionManager.java  ControlActivity.java  MainActivity.java  ScaningActivity.java  SplashScreenActivity.java
android/app/src/main/res/drawable/: background.xml  oval_button.xml  round_button.xml
android/app/src/main/res/layout/: activity_control.xml  activity_main.xml  activity_scaning.xml  activity_splash_screen.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/java/com/example/sreeyesh/slegro/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
firmware/: CMakeLists.txt  lpc2138.ld
firmware/include/: error.h  log.h  system.h  version.h
firmware/src/: log.c  main.c  syscalls.c  system.c
firmware/src/app/: main.c  slegro.c
firmware/src/app/include/: version.h
firmware/src/drivers/: gpio.c  i2c.c  pll.c  pwm.c  serial.c  servo.c  timer.c  vic.c
firmware/src/drivers/include/: gpio.h  i2c.h  serial.h  servo.h  timer.h  vic.h
firmware/src/system/: interrupt.c  startup.c  stm32f103rc.ld  syscalls.c  sysclk.c
firmware/src/system/include/: common.h  interrupt.h  log.h  sysclk.h  system.h
include/: err.h  log.h  pll.h
src/: lpc2138.ld  pll.c  servo.c
